--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-*.aux
-*.fls
-*.log
-*.out
-*.pdf
-*.syntex.gz
-*.toc
-*.fdb_latexmk
-*.pth
+4X.pth
+8X.pth
+test.ipynb
+Project_SuperRes\project.aux
+Project_SuperRes\project.fdb_latexmk
+Project_SuperRes\project.fls
+Project_SuperRes\project.log
+Project_SuperRes\project.out
+Project_SuperRes\project.synctex.gz
+Project_SuperRes\project.toc
